src/test/deca/context/invalid/provided/doubledeclvarclass.deca
class A{
    int x;
    float x;

}